--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
+
+#APP
 spring.application.name=ormpractice
 server.port=8081
+
+#DB
 spring.datasource.url=jdbc:postgresql://pg-f0efcb7-tunc-94d8.j.aivencloud.com:24529/defaultdb?ssl=require&user=avnadmin&password=AVNS_Tz64kpXGB9roQFStbCD
 spring.jpa.hibernate.dll-auto=none
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+#LOG
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
